<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

           <TextView
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:id="@id/txt_view1"
               android:textColor="@color/white"
               android:textSize="25sp"
               android:textStyle="bold"
               android:layout_marginTop="20dp"
               android:text="@string/inter"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

           <TextView
               android:id="@+id/text_view2"
               android:layout_marginBottom="20dp"
               app:layout_constraintTop_toTopOf="parent"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:textAlignment="center"
               app:layout_constraintBottom_toTopOf="@id/txt_view1"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:textSize="32sp"
               android:text="@string/wellCom"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <TextView
               android:textColor="@color/white"
               android:textAlignment="center"
               android:id="@+id/txt_view3"
               android:textSize="20sp"
               android:layout_marginHorizontal="30dp"
               android:text="@string/as"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <EditText
               android:layout_marginHorizontal="20dp"
               app:layout_constraintTop_toBottomOf="@id/txt_view3"
               android:id="@+id/edt_1"
               android:padding="20dp"
               android:hint="@string/email"
               android:textColor="@color/black"
               android:layout_marginTop="20dp"
               android:background="@drawable/input_type"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <EditText
               android:layout_marginHorizontal="20dp"
               app:layout_constraintTop_toBottomOf="@id/edt_1"
               android:id="@+id/edt_2"
               android:padding="20dp"
               android:textColor="@color/black"
               android:hint="@string/password"
               android:layout_marginVertical="20dp"
               android:background="@drawable/input_type"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

           <com.google.android.material.button.MaterialButton
               android:layout_marginTop="12dp"
               app:layout_constraintTop_toBottomOf="@id/edt_2"
               android:layout_marginHorizontal="20dp"
               android:id="@+id/btn_1"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:textSize="16sp"
               android:backgroundTint="@color/gray"
               android:textAllCaps="false"
               android:text="@string/to_home"
               android:layout_width="match_parent"
               android:layout_height="60dp"/>

           <TextView
               android:id="@+id/txt_view1"
               app:layout_constraintTop_toBottomOf="@id/btn_1"
               android:layout_marginTop="16dp"
               android:textAlignment="center"
               android:textStyle="bold"
               android:textSize="16sp"
               android:textColor="@color/white"
               android:text="@string/forget_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>
